<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Alarmemi</string>
    <string name="menu_settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="help">Help</string>
    <string name="about_provision">About Provision...</string>
    <string name="visit_website">Visit Webpage</string>
    <string name="visit_website_summary">http://www.provisionmod.com/</string>
    <string name="developers_info">About Developer</string>
    <string name="dev_vista">Vista</string>
    <string name="dev_vista_sum">Maintainer / UI Development</string>
    <string name="dev_bdoolgi">B_DoolGi</string>
    <string name="dev_bdoolgi_sum">Project Planning</string>
    <string name="dev_fleeon">FleeOn</string>
    <string name="dev_fleeon_sum">Logic / UI Development</string>
    <string name="dev_marutian">Marutian</string>
    <string name="dev_marutian_sum">Design</string>
    <string name="dev_steelheart">SteelHeart</string>
    <string name="dev_steelheart_sum">UI Development</string>
    <string name="dev_yoke">York</string>
    <string name="dev_yoke_sum">Cicada Resource</string>
    <string name="dev_cheyun">Coding_robot</string>
    <string name="dev_cheyun_sum">Server Development</string>
    <string name="tip1">Hello Everyone!</string>
    <string name="tip1_sub">Swipe left to go to next screen.</string>
    <string name="tip2">Alarm list will displayed in here.\nYou can create new Alarm or delete alarm.</string>
    <string name="tip3">When alarm rings, The cicada will buzz. You can turn off alarm by hitting cicada.</string>
    <string name="tip4">You can snooze the alarm by\nShaking your phone strongly.</string>
    <string name="tip5">Done!</string>
    <string name="tip5_sub">Now, Let\'s meet a cicada alarm!</string>
    <string name="done_button">Go to the main menu</string>
    <string name="app_label">Alarmemi</string>
    <string name="alarm_list_title">Alarms</string>
    <string name="add_alarm">Add new alarm...</string>
    <string name="menu_desk_clock">Desk clock</string>
    <string name="menu_edit_alarm">Edit alarm</string>
    <string name="delete_alarm">Delete alarm</string>
    <string name="enable_alarm">Turn alarm on</string>
    <string name="disable_alarm">Turn alarm off</string>
    <string name="delete_alarm_confirm">This alarm will be deleted.</string>
    <string name="label">Cicada Nickname</string>
    <string name="default_label">Alarm</string>
    <string name="application">Application</string>
    <string name="application_title">App to launch</string>
    <string name="application_none">None</string>
    <string name="no_dialog">Hide dialog</string>
    <string name="no_dialog_on">No snooze/dismiss dialog</string>
    <string name="no_dialog_off">Snooze/dismiss dialog will be shown</string>
    <string name="set_alarm">Set alarm</string>
    <string name="alarm_vibrate">Vibrate the cicada</string>
    <string name="alarm_repeat">Repeat</string>
    <string name="alert">Ringtone</string>
    <string name="alarm_alert_dismiss_text">Dismiss</string>
    <string name="alarm_alert_alert_silenced">Alarm silenced after <xliff:g id="minutes">%d</xliff:g> minutes</string>
    <string name="alarm_alert_snooze_text">Snooze</string>
    <string name="alarm_alert_snooze_text_dual_mode">Snooze (hold to dismiss)</string>
    <string name="alarm_alert_snooze_set">Snoozing for <xliff:g id="minutes">%d</xliff:g> minutes.</string>
    <string-array name="alarm_set">
        <item>This alarm is set for less than 1 minute from now.</item>
        <item>This alarm is set for <xliff:g id="DAYS" example="2 days">%1$s</xliff:g> from now.</item>
        <item>This alarm is set for <xliff:g id="HOURS" example="2 hours">%2$s</xliff:g> from now.</item>
        <item>This alarm is set for <xliff:g id="DAYS" example="2 days">%1$s</xliff:g> and <xliff:g id="HOURS" example="2 hours">%2$s</xliff:g> from now.</item>
        <item>This alarm is set for <xliff:g id="MINUTES" example="2 minutes">%3$s</xliff:g> from now.</item>
        <item>This alarm is set for <xliff:g id="DAYS" example="2 days">%1$s</xliff:g> and <xliff:g id="MINUTES" example="2 minutes">%3$s</xliff:g> from now.</item>
        <item>This alarm is set for <xliff:g id="HOURS" example="2 hours">%2$s</xliff:g> and <xliff:g id="MINUTES" example="2 minutes">%3$s</xliff:g> from now.</item>
        <item>This alarm is set for <xliff:g id="DAYS" example="2 days">%1$s</xliff:g>, <xliff:g id="HOURS" example="2 hours">%2$s</xliff:g>, and <xliff:g id="MINUTES" example="2 minutes">%3$s</xliff:g> from now.</item>
    </string-array>
    <string name="day">"1 day"</string>
    <string name="days">"<xliff:g id="days">%s</xliff:g> days"</string>
    <string name="hour">1 hour</string>
    <string name="hours"><xliff:g id="hours">%s</xliff:g> hours</string>
    <string name="minute">"1 minute"</string>
    <string name="minutes">"<xliff:g id="minutes">%s</xliff:g> minutes"</string>
    <string name="every_day">Every day</string>
    <string name="never">Never</string>
    <string name="day_concat">", "</string>
    <string name="analog_gadget">Analog clock</string>
    <string name="settings">Settings</string>
    <string name="alarm_in_silent_mode_title">Alarm in silent mode</string>
    <string name="alarm_in_silent_mode_summary">Play alarm even when the phone is in silent mode</string>
    <string name="hours_label">h</string>
    <string name="minutes_label">m</string>
    <string name="seconds_label">s</string>
    <string name="hours_label_description">hours</string>
    <string name="minutes_label_description">minutes</string>
    <string name="seconds_label_description">seconds</string>
    <string name="time_picker_ampm_label">--</string>
    <string name="time_picker_time_seperator">:</string>
    <string name="time_picker_00_label">:00</string>
    <string name="time_picker_30_label">:30</string>
    <string name="snooze_duration_title">Snooze duration</string>
    <string-array name="snooze_duration_entries">
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
        <item>20 minutes</item>
        <item>25 minutes</item>
        <item>30 minutes</item>
    </string-array>
    <string name="times">times</string>
    <string-array name="snooze_duration_values" translatable="false">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
    </string-array>
    <string name="done">Done</string>
    <string name="revert">Revert</string>
    <string name="delete">Delete</string>
    <string name="alarm_volume_title">Alarm volume</string>
    <string name="alarm_volume_summary">Set the volume of alarms</string>
    <string name="silent_alarm_summary">Silent</string>
    <string name="alarm_notify_text">Select to snooze or dismiss this alarm.</string>
    <string name="alarm_notify_snooze_label"><xliff:g id="label">%s</xliff:g> (snoozed)</string>
    <string name="alarm_notify_snooze_text">Alarm set for <xliff:g id="time">%s</xliff:g>. Select to cancel.</string>
    <string name="volume_button_setting_title">Volume and Camera</string>
    <string name="volume_button_dialog_title">Button effect</string>
    <string name="volume_button_setting_summary">Set what these buttons do when pressed during an alarm</string>
    <string-array name="volume_button_setting_entries">
        <item>None</item>
        <item>Snooze</item>
        <item>Dismiss</item>
    </string-array>
    <string-array name="volume_button_setting_values" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="alarm_button_description">Alarms</string>
    <string name="gallery_button_description">Gallery</string>
    <string name="music_button_description">Music</string>
    <string name="nightmode_button_description">Dim</string>
    <string name="home_button_description">Launcher</string>
    <string name="desk_clock_button_description">Clock Display</string>
    <string name="battery_charging_level"><xliff:g id="number">%d</xliff:g><xliff:g id="percent">%%</xliff:g></string>
    <string name="weather_fetch_failure">Weather information currently unavailable.</string>
    <string name="menu_item_dock_settings" msgid="9161438664257429372">Dock settings</string>
    <string name="alarm_limit_title">Maximum alarm duration</string>
    <string name="memi_count">Count of hitting cicada</string>
    <string name="snooze_strength">Strength of shaking to snooze</string>
    <string name="alarm_klaxon_service_desc">Sound playback service for alarms set in DeskClock.</string>
    <string-array name="alarm_limit_entries">
        <item>5 minutes</item>
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>60 minutes</item>
        <item>90 minutes</item>
        <item>120 minutes</item>
        <item>Infinite</item>
    </string-array>
    <string-array name="alarm_limit_values" translatable="false">
        <item>5</item>
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>90</item>
        <item>120</item>
        <item>-1</item>
    </string-array>
    <string name="screensaver_timeout_title">Screensaver timeout</string>
    <string-array name="screensaver_timeout_entries">
        <item>1 minute</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>60 minutes</item>
        <item>@string/never</item>
    </string-array>
    <string-array name="screensaver_timeout_values" translatable="false">
        <item>1</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>-1</item>
    </string-array>
    <string name="color_picker">Time Color</string>
    <string name="color_picker_title">Time Color (Screensaver)</string>
    <string name="color_picker_summary">Change the color of the time used in screensaver mode</string>
    <string name="color_picker_sample">11:45</string>
    <string name="color_picker_alpha">Transparency (Dimmed only)</string>
    <string name="color_picker_red">Red</string>
    <string name="color_picker_green">Green</string>
    <string name="color_picker_blue">Blue</string>
    <string name="use_dual_mode_button">Dual-mode snooze</string>
    <string name="use_dual_mode_button_on">Long-press the snooze button to dismiss the alarm</string>
    <string name="use_dual_mode_button_off">Separate snooze and dismiss buttons</string>
    <string name="shaking_at_least">"You should shake at least 10 times!"</string>
    <string name="save_shaking_question">Would you like to snooze by shaking %d times in this strength?</string>
    <string name="control_sense">Control Sensitivity to Snooze</string>
    <string name="control_sense_content">Shake your phone the number of times and the degree of strength you want to snooze and press [Apply] button.</string>
    <string name="apply">Apply</string>
    <string name="resetting">Reset</string>
    <string name="snooze_test">Sensitivity to Snooze Test</string>
    <string name="forest_name">Forest Name</string>
    <string name="forest_pw">Forest Password</string>
    <string name="forest_pw_chk">Check Forest Password</string>
    <string name="make_forest">Make Forest</string>
    <string name="select_device">Select device to ring together</string>
    <string name="select_forest">"Select forest"</string>
    <string name="notify">Notify</string>
    <string name="menu_main">Main</string>
    <string name="menu_forest">Forest</string>
    <string name="alarm_color">Alarm color</string>
    <string name="alarm_color_summary">(Cloud alarm don\'t synchronize the alarm color up.)</string>
</resources>