<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ececec"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/menu_main"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ics"
        android:gravity="center_vertical"
        android:padding="16dp" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:src="@drawable/ic_home" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"
            android:text="@string/menu_main"
            android:textColor="#000000"
            android:textSize="16dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="#404040" />

    <LinearLayout
        android:id="@+id/menu_add_alarm"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ics"
        android:gravity="center_vertical"
        android:padding="16dp" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:src="@drawable/ic_alarm_add" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"
            android:text="@string/add_alarm"
            android:textColor="#000000"
            android:textSize="16dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="#404040" />

    <LinearLayout
        android:id="@+id/menu_forest"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ics"
        android:gravity="center_vertical"
        android:padding="16dp" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:src="@drawable/ic_cloud" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"
            android:text="@string/menu_forest"
            android:textColor="#000000"
            android:textSize="16dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="#404040" />

    <LinearLayout
        android:id="@+id/menu_about"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ics"
        android:gravity="center_vertical"
        android:padding="16dp" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:src="@drawable/ic_about" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"
            android:text="@string/about_provision"
            android:textColor="#000000"
            android:textSize="16dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="#404040" />

    <LinearLayout
        android:id="@+id/menu_settings"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ics"
        android:gravity="center_vertical"
        android:padding="16dp" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:src="@drawable/ic_setting" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"
            android:text="@string/settings"
            android:textColor="#000000"
            android:textSize="16dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="#404040" />

    <LinearLayout
        android:id="@+id/menu_help"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ics"
        android:gravity="center_vertical"
        android:padding="16dp" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:src="@drawable/ic_help" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"
            android:text="@string/help"
            android:textColor="#000000"
            android:textSize="16dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="#404040" />

    <LinearLayout
        android:id="@+id/menu_exit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ics"
        android:gravity="center_vertical"
        android:padding="16dp" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:src="@drawable/ic_exit" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"
            android:text="@string/exit"
            android:textColor="#000000"
            android:textSize="16dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="#404040" />

    <LinearLayout
        android:id="@+id/notify_refresh"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#c7c7c7" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ics"
            android:padding="16dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical"
                android:text="@string/notify"
                android:textColor="#000000"
                android:textSize="16dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/ic_notify_refresh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/refresh" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>